# vertica-hyperloglog

./: README.md  criteo.cfg
SOURCES/: CMakeLists.txt  criteo.cfg  install.sql
SOURCES/include/: hll_vertica.hpp
SOURCES/src/: HllCombine.cpp  HllCreateSynopsis.cpp  HllDistinctCount.cpp  HllJava.cpp  bias_corrected_estimate.cpp  hll.hpp  hll_raw.hpp  hll_vertica.cpp  linear_counting.cpp
SOURCES/tests/: bias_correction_test.cpp  hll_driver.cpp  hll_raw_test.cpp  hll_test.cpp
SPECS/: vertica-udfs.spec
